Bug 476669 - Audio CDs KCM prompts to save/discard changes even when nothing was changed
Summary: Audio CDs KCM prompts to save/discard changes even when nothing was changed
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_audiocd (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 481210 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-07 12:19 UTC by Patrick Silva
Modified: 2024-02-20 16:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-07 12:19:22 UTC
STEPS TO REPRODUCE
1. open Audio CDs KCM
2. do not change anything and try to close the System Settings
3. 

OBSERVED RESULT
System Settings prompts to save/discard changes

EXPECTED RESULT
do not prompt to save/discard changes when nothing was changed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Patrick Silva 2024-01-11 12:21:55 UTC
On Plasma 6 RC1, System Settings even crashes when I click on "Apply" or "Discard" button of apply/discard dialog.
Comment 2 Patrick Silva 2024-02-11 18:45:59 UTC
*** Bug 481210 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-02-20 09:32:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/audiocd-kio/-/merge_requests/12
Comment 4 Nicolas Fella 2024-02-20 16:29:23 UTC
Git commit 92a474ba8b8fc87096348559d58e56b10c1cb788 by Nicolas Fella.
Committed on 20/02/2024 at 09:31.
Pushed by nicolasfella into branch 'master'.

Only mark KCM as changed when text was actually edited

textChanged is also emitted when setText is called, which we do on load

This causes the KCM to be always marked as changed even when the user never changed anything

Use textEdited, which is only emitted when a human changed it

M  +9    -9    kcmaudiocd/kcmaudiocd.cpp

https://invent.kde.org/multimedia/audiocd-kio/-/commit/92a474ba8b8fc87096348559d58e56b10c1cb788
Comment 5 Nicolas Fella 2024-02-20 16:31:13 UTC
Git commit a4dc87c18adaf43f2441a874caa6416121e2b62a by Nicolas Fella.
Committed on 20/02/2024 at 16:29.
Pushed by nicolasfella into branch 'release/24.02'.

Only mark KCM as changed when text was actually edited

textChanged is also emitted when setText is called, which we do on load

This causes the KCM to be always marked as changed even when the user never changed anything

Use textEdited, which is only emitted when a human changed it
(cherry picked from commit 92a474ba8b8fc87096348559d58e56b10c1cb788)

M  +9    -9    kcmaudiocd/kcmaudiocd.cpp

https://invent.kde.org/multimedia/audiocd-kio/-/commit/a4dc87c18adaf43f2441a874caa6416121e2b62a