Only mark KCM as changed when text was actually edited

textChanged is also emitted when setText is called, which we do on load

This causes the KCM to be always marked as changed even when the user never changed anything

Use textEdited, which is only emitted when a human changed it

BUG: 476669